[gd_scene load_steps=7 format=3 uid="uid://bakwomq25o5k3"]

[ext_resource type="Script" uid="uid://q08w3rqlimwh" path="res://child.gd" id="1_vgl3u"]
[ext_resource type="PackedScene" uid="uid://juhodofdb8vy" path="res://candy.tscn" id="2_d04bu"]
[ext_resource type="Script" uid="uid://bo744wpycscqd" path="res://godot-vision-cone-d9c57d82370efe068d955a2c94de0838d29c1278/addons/vision_cone_2d/vision_cone_2d.gd" id="3_4bbvj"]

[sub_resource type="LabelSettings" id="LabelSettings_vgl3u"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_vgl3u"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d04bu"]
radius = 32.0

[node name="child" type="Area2D"]
collision_layer = 5
collision_mask = 5
script = ExtResource("1_vgl3u")
candy = ExtResource("2_d04bu")

[node name="Node2D" type="Node2D" parent="."]

[node name="Label" type="Label" parent="Node2D"]
offset_left = -97.0
offset_top = -66.0
offset_right = 93.0
offset_bottom = -21.0
text = "Space: scare"
label_settings = SubResource("LabelSettings_vgl3u")
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(50, 50)
texture = SubResource("PlaceholderTexture2D_vgl3u")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_d04bu")

[node name="echildView" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="VisionCone2D" type="Node2D" parent="echildView" node_paths=PackedStringArray("write_collision_polygon", "write_polygon2d")]
script = ExtResource("3_4bbvj")
angle_deg = 45
collision_layer_mask = 4
write_collision_polygon = NodePath("../CollisionPolygon2D")
write_polygon2d = NodePath("")
debug_shape = true
metadata/_custom_type_script = "uid://bo744wpycscqd"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="echildView"]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="area_entered" from="echildView" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="echildView" to="." method="_on_area_2d_area_exited"]
